--- a/Flutter/flutter_application_1/pubspec.yaml
+++ b/Flutter/flutter_application_1/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   html: ^0.15.4
   provider: ^6.1.2
+  go_router: ^13.2.0
 
 dev_dependencies:
   flutter_test:
