--- a/Flutter/flutter_application_1/pubspec.yaml
+++ b/Flutter/flutter_application_1/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   html: ^0.15.4
   provider: ^6.1.2
   go_router: ^13.2.0
+  flutter_bloc: ^8.1.4
+  bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
