--- a/Flutter/flutterapp2/pubspec.yaml
+++ b/Flutter/flutterapp2/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   camera: ^0.10.5+9
   provider: ^6.1.2
   flutter_secure_storage: ^9.0.0
+  go_router: ^13.2.0
 
 dev_dependencies:
   flutter_test:
