--- a/Flutter/flutterapp2/pubspec.yaml
+++ b/Flutter/flutterapp2/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   go_router: ^13.2.0
   universal_io: ^2.2.2
+  firebase_core: ^2.27.1
+  flutter_local_notifications: ^17.0.0
+  firebase_messaging: ^14.7.20
+  flutter_bloc: ^8.1.4
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
