--- a/Angular/GoSave/.gitignore
+++ b/Angular/GoSave/.gitignore
@@ -28,6 +28,9 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+# Environment
+environment.ts
+
 # Miscellaneous
 /.angular/cache
 .sass-cache/
